envoy-config.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 9000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: combined_routes
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/auth/"
                          route:
                            cluster: chat-app-auth
                            prefix_rewrite: "/"
                        - match:
                            prefix: "/api/"
                          route:
                            cluster: chat-app
                            prefix_rewrite: "/"
                        - match:
                            prefix: "/"
                          route:
                            cluster: chat-app-frontend
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                upgrade_configs:
                  upgrade_type: "websocket"
  clusters:
    - name: chat-app
      type: STRICT_DNS
      load_assignment:
        cluster_name: chat-app
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8000
    - name: chat-app-auth
      type: STRICT_DNS
      load_assignment:
        cluster_name: chat-app-auth
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8001
    - name: chat-app-frontend
      type: STRICT_DNS
      load_assignment:
        cluster_name: chat-app-frontend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3000
